[package]
name = "stun_codec"
version = "0.1.10"
authors = ["Takeru Ohta <phjgt308@gmail.com>"]
description = "Encoders and decoders for STUN (RFC 5389) and its extensions"
homepage = "https://github.com/sile/stun_codec"
repository = "https://github.com/sile/stun_codec"
readme = "README.md"
keywords = ["STUN"]
categories = ["encoding"]
license = "MIT"
edition = "2018"

[badges]
travis-ci = {repository = "sile/stun_codec"}
codecov = {repository = "sile/stun_codec"}

[dependencies]
bytecodec = "0.4"
byteorder = "1"
crc = "1"
hmac-sha1 = "0.1"
md5 = "0.6"
trackable = "0.2"
